<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/str_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:textStyle="bold|italic"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#000000"/>

    <TextView
        android:text="@string/str_robot_name"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        />

    <EditText
        android:id="@+id/edit_ip"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        />
    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/btn_connect"
        android:text="@string/str_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>


</LinearLayout>