<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/str_robot_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:textColor="#000000"/>

    <TextView
        android:text="@string/str_choise_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:textColor="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        >
        <ImageButton
            android:id="@+id/button_manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/joystick"
            android:layout_weight="1"
            android:background="#FFFFFF"
            />
        <ImageButton
            android:id="@+id/button_automatic"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/robot"
            android:background="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:text="@string/str_manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="#000000"
            />
        <TextView
            android:text="@string/str_automatic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="#000000"
            />
    </LinearLayout>
</LinearLayout>